# tool-calling-chatbot

./: .env.example  .gitignore  LICENSE  PROJECT_COMPLETE.md  README.md  pyproject.toml
data/: melbourne_restaurants.json
src/melbourne_food_site/: __init__.py  main.py
src/melbourne_food_site/api/: __init__.py  recommendations.py  restaurants.py
src/melbourne_food_site/models/: __init__.py  restaurant.py
src/melbourne_food_site/services/: __init__.py  recommendation_service.py  restaurant_service.py
src/tool_calling_chatbot/: __init__.py  main.py
src/tool_calling_chatbot/core/: __init__.py  base.py  cli.py  config.py  openai_client.py
src/tool_calling_chatbot/tools/: __init__.py  calculator.py  file_reader.py  melbourne_food_recommender.py  narrm_food_recommender.py  random_joke.py  vintage_outfit_generator.py
